refactor(docs): add a demo for custom table actions (WIP)

--- a/showcase/src/assets/translations/fr.json
+++ b/showcase/src/assets/translations/fr.json
@@ -243,7 +243,7 @@
       },
       "TABLE": {
         "REGULAR": "Table régulière",
-        "WITH_ALTERNATIVE_ACTION_BAR": "Table avec Action Bar alternative",
+        "WITH_CUSTOM_ACTIONS": "Table avec actions personalisé",
         "WITH_FIXED_HEADER": "Table avec un en-tête fixe",
         "WITH_TRANSCLUDED_ACTION_BAR": "Table avec Action Bar 'transcluded'",
         "WITH_CUSTOM_STYLING": "Table avec mise en page personnalisé",
