--- a/showcase/src/assets/translations/nl.json
+++ b/showcase/src/assets/translations/nl.json
@@ -244,7 +244,7 @@
       "TABLE": {
         "REGULAR": "Normale tabel",
         "WITH_CUSTOM_ACTIONS": "Tabel met aangepaste acties",
-        "WITH_FIXED_HEADER": "Tabel met een vaste header",
+        "WITH_FIXED_HEADER": "Tabel met vaste header",
         "WITH_TRANSCLUDED_ACTION_BAR": "Tabel met 'transcluded' Action Bar",
         "WITH_CUSTOM_STYLING": "Tabel met aangepaste opmaak",
         "TITLE": "Stark table"
