--- a/showcase/src/assets/translations/nl.json
+++ b/showcase/src/assets/translations/nl.json
@@ -116,6 +116,9 @@
         "INPUT2": "<b>helpPageUrl</b> contains the url to the help page.",
         "INPUT3": "The included HTML elements will be copied inside the footer as the leftmost element."
       },
+      "GENERIC_SEARCH": {
+        "TITLE": "Stark Generic Search"
+      },
       "HEADER": {
         "COPY_PASTE": "Then you can copy/paste this HTML into your code",
         "EXPLAINED": "Introduction",
