fix(stark-ui): fix animation for toggling search
  - added toggle to demo page

--- a/showcase/src/assets/translations/en.json
+++ b/showcase/src/assets/translations/en.json
@@ -117,7 +117,8 @@
         "INPUT3": "The included HTML elements will be copied inside the footer as the leftmost element."
       },
       "GENERIC_SEARCH": {
-        "TITLE": "Stark Generic Search"
+        "TITLE": "Stark Generic Search",
+        "TOGGLE": "Toggle search"
       },
       "HEADER": {
         "COPY_PASTE": "Then you can copy/paste this HTML into your code",
