--- a/showcase/src/assets/translations/fr.json
+++ b/showcase/src/assets/translations/fr.json
@@ -117,7 +117,8 @@
         "INPUT3": "Les éléments HTML inclus seront copiés dans le pied de page et affichés à gauche des autres éléments."
       },
       "GENERIC_SEARCH": {
-        "TITLE": "Stark Generic Search"
+        "TITLE": "Stark Generic Search",
+        "TOGGLE": "Toggle search"
       },
       "HEADER": {
         "COPY_PASTE": "Ensuite il faut copier/coller ce bout de code HTML",
